# mdsend

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test_publish.py
src/mdsend/: __init__.py  cli.py  core.py
